  - Removed --enable-icache configure option. The option is always enabled
    for any Bochs configuration. Trace cache support still remains optional
    and could be configured off.
  - Added configure option to compile in GUI frontend for Bochs debugger,
    to enable configure with --enable-debugger-gui option.
    The GUI debugger frontend is enabled by default with Bochs debugger.
  - Added configure option to enable/disable A20 pin support. Disabling the
    A20 pin support slightly speeds up the emulation.
  - reduced dependencies between source files for faster code generation

- BIOS
  - Added S3 (suspend to RAM) ACPI state to BIOS (patch by Gleb Natapov)
  - Implemented MTRR support in the bios (patches by Avi Kivity and Alex
    Williamsion with additions by Sebastian Herbszt)
  - Bug fixes

- I/O Devices
  - Added user plugin support
  - remaining devices converted to plugins: pit, ioapic, iodebug
  - added 'plugin_ctrl' bochsrc option to control the presence of optional
    device plugins without a separate option. By default all plugins are enabled.
  - added register mechanism for removable mouse and keyboard devices
  - Hard drive / cdrom
    - PACKET-DMA feature now supported by all ATAPI commands
    - ATAPI command 0x1A added (based on the Qemu implementation)
  - sb16
    - Added ALSA sound support on Linux (PCM/MIDI output)
    - FM synthesizer now usable with MIDI output (simple piano only)
      - Fixed OPL frequency to MIDI note translation
      - Fixed MIDI output command
  - keyboard
    - added keyboard controller commands 0xCA and 0xCB
  - USB
    - USB code reorganized to support more HC types and devices
    - added USB OHCI support written by Ben Lunt
    - added external USB hub support (initial code ported from Qemu)
    - added USB cdrom support (SCSI layer ported from Qemu)
    - added status bar indicators to show data transfer
  - VGA
    - VBE video memory increased to 16 MB